eks-with-addon/externalDNS/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nginx.victor-demo.private.com

    service.beta.kubernetes.io/aws-load-balancer-type: external # this is for load balance type. external means NLB.without it will be classic
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip" # ip or instance
    # service.beta.kubernetes.io/aws-load-balancer-scheme: internal # internal is default. or internet-facing
    
    # for old version, might not beed
    # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
    app: nginx

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
